<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">上桌菜</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    
    <string name="no_net_msg">无网络</string>
    <string name="no_data_msg">无数据</string>
    <string name="str_tab1_title">首页</string>
    <string name="str_tab2_title">名厨</string>
    <string name="str_tab3_title">名菜</string>
    <string name="str_tab4_title">发现</string>
    <string name="str_tab5_title">购物车</string>
    <string name="str_tab6_title">我的</string>
    <string name="str_tab1_address">"潍坊  "</string>
    <string name="str_mingcai_recommend_yin">well-known dish</string>
    <string name="str_mingcai_recommend_zh">名菜推荐</string>
    <string name="str_mingcai_recommend_en">Recommended dishs</string>
    <string name="str_mingchu_house_zh">名厨殿堂</string>
    <string name="str_mingchu_house_en">well_known chef</string>
    <string name="str_personal_center_zh">个人中心</string>
    <string name="str_personal_center_en">personal-center</string>
    <string name="act_address_edit"><u> 编辑   </u></string>
    <string name="unpay"><u> 未支付   </u></string>
    <string name="mybalance">我的余额</string>
    <string name="myorder">我的订单</string>
    <string name="mycoupon">我的优惠券</string>
    <string name="login_str">账户登录</string>
    <string name="setting">设置</string>
    <string name="topay_str">订单支付</string>
    <string name="order_detail">订单详情</string>
    <string name="topay_ali">  支付宝   </string>
    <string name="topay_weixin">  微信支付</string>
    <string name="topay_yue">  余额支付</string>
    <string name="recharge_str">余额充值</string>

</resources>
