<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/bottom_bar_hight"
    android:orientation="vertical" 
    android:background="@color/white_bg">
    <View 
        android:layout_height="1dp"
        android:layout_width="match_parent"
        android:background="@color/black_bg"/>
    <RadioGroup 
        android:id="@+id/radiogroup"
        android:layout_marginTop="3dp"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:background="@null"
        >
        <RadioButton 
            android:id="@+id/id_tab_bottom_1"
            android:scaleX="@dimen/main_bottom_scale"
            android:scaleY="@dimen/main_bottom_scale"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/str_tab1_title"
            android:textSize="@dimen/main_bottom_font"
            android:textColor="@drawable/glay2red_color_select"
            android:button="@null"
            android:drawableTop="@drawable/tab1_selector"
            />   
        <RadioButton 
            android:id="@+id/id_tab_bottom_2"
            android:scaleX="@dimen/main_bottom_scale"
            android:scaleY="@dimen/main_bottom_scale"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/str_tab3_title"
            android:textSize="@dimen/main_bottom_font"
            android:textColor="@drawable/glay2red_color_select"
            android:button="@null"
            android:drawableTop="@drawable/tab3_selector"/>   
        <RadioButton 
            android:id="@+id/id_tab_bottom_3"
            android:scaleX="@dimen/main_bottom_scale"
            android:scaleY="@dimen/main_bottom_scale"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/str_tab2_title"
            android:button="@null"
            android:textSize="@dimen/main_bottom_font"
            android:textColor="@drawable/glay2red_color_select"
            android:drawableTop="@drawable/tab2_selector"/>   
        <RadioButton 
            android:id="@+id/id_tab_bottom_4"
            android:scaleX="@dimen/main_bottom_scale"
            android:scaleY="@dimen/main_bottom_scale"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/str_tab4_title"
            android:button="@null"
            android:textSize="@dimen/main_bottom_font"
            android:textColor="@drawable/glay2red_color_select"
            android:drawableTop="@drawable/tab4_selector"/>   
        <RadioButton 
            android:id="@+id/id_tab_bottom_5"
            android:scaleX="@dimen/main_bottom_scale"
            android:scaleY="@dimen/main_bottom_scale"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/str_tab5_title"
            android:button="@null"
            android:textSize="@dimen/main_bottom_font"
            android:textColor="@drawable/glay2red_color_select"
            android:drawableTop="@drawable/tab5_selector"
            android:visibility="gone"/>   
        <RadioButton 
            android:id="@+id/id_tab_bottom_6"
            android:scaleX="@dimen/main_bottom_scale"
            android:scaleY="@dimen/main_bottom_scale"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/str_tab6_title"
            android:button="@null"
            android:textSize="@dimen/main_bottom_font"
            android:textColor="@drawable/glay2red_color_select"
            android:drawableTop="@drawable/tab6_selector"/>   
    </RadioGroup>
    

</LinearLayout>
